[package]
name = "greyhound"
version = "0.1.0"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2018"

[dependencies]
bb8-postgres = "0.3.0"
hyper = "0.12.25"
tokio = "0.1.18"
futures = "0.1.25"
http = "0.1.16"
bb8 = "0.3.0"
tokio-postgres = "0.4.0-rc.2"
try_future = "0.1.3"
lazy_static = "1.3.0"
